Fixed bug #35062 (socket_read() produces warnings on non blocking sockets).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@202020 c90b9560-bf6c-de11-be94-00142212c4b1